sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:11: error: not found: value lg
        if (i!=lg-1){
               ^